# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

add_subdirectory(core)
add_subdirectory(compute)
add_subdirectory(mpi)
add_subdirectory(defbox)
add_subdirectory(logic)
add_subdirectory(amr)
add_subdirectory(particle_neighbors)
add_subdirectory(grid_cell_particles)
add_subdirectory(analytics)
add_subdirectory(io)
add_subdirectory(debug)
add_subdirectory(extra_storage)

